ecmascript/parser/tests/test262-error-references/fail/09af6db5fe41b857.js.stderr
error: Expected Semi
 --> $DIR/tests/test262-parser/fail/09af6db5fe41b857.js:1:7
  |
1 | yield v
  |       ^

